[gd_scene load_steps=7 format=2]

[ext_resource path="res://Scripts/Enemies/Slime.gd" type="Script" id=1]
[ext_resource path="res://Assets/Graphics/Enemies/Slime.png" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 17, 12.375 )

[sub_resource type="Animation" id=3]
resource_name = "Death"
length = 0.875
step = 0.03125
tracks/0/type = "value"
tracks/0/path = NodePath("Slime_Normal:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.03125, 0.0625, 0.09375, 0.5, 0.53125, 0.5625, 0.59375, 0.625, 0.65625, 0.6875, 0.71875, 0.75, 0.78125, 0.8125, 0.84375 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 12, 13, 14, 15, 14, 13, 12, 16, 17, 18, 19, 20, 21, 22, 23, 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Slime_Collision:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Slime_Area/Slime_Hitbox:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=2]
resource_name = "Idle"
length = 0.5
loop = true
step = 0.0833333
tracks/0/type = "value"
tracks/0/path = NodePath("Slime_Normal:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.0833333, 0.166667, 0.25, 0.333333, 0.416667 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 1, 2, 3, 4, 3, 2 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Slime_Collision:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Slime_Area/Slime_Hitbox:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=4]
resource_name = "None"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Slime_Normal:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[node name="Slime" type="KinematicBody2D"]
collision_layer = 0
script = ExtResource( 1 )

[node name="Slime_Normal" type="Sprite" parent="."]
texture = ExtResource( 2 )
flip_h = true
hframes = 12
vframes = 12
frame = 1

[node name="Slime_Collision" type="CollisionShape2D" parent="."]
position = Vector2( 0, 9.375 )
shape = SubResource( 1 )

[node name="Slime_Area" type="Area2D" parent="." groups=["Enemy"]]

[node name="Slime_Hitbox" type="CollisionShape2D" parent="Slime_Area"]
position = Vector2( 0, 9.25 )
shape = SubResource( 1 )

[node name="Walk_Pause_Time" type="Timer" parent="."]

[node name="Slime_Ani" type="AnimationPlayer" parent="."]
anims/Death = SubResource( 3 )
anims/Idle = SubResource( 2 )
anims/None = SubResource( 4 )

[connection signal="area_entered" from="Slime_Area" to="." method="_on_Slime_Area_area_entered"]
[connection signal="area_exited" from="Slime_Area" to="." method="_on_Slime_Area_area_exited"]
[connection signal="timeout" from="Walk_Pause_Time" to="." method="_on_Walk_Pause_Time_timeout"]
[connection signal="animation_finished" from="Slime_Ani" to="." method="_on_Slime_Ani_animation_finished"]
